@@ -1,0 +1,44 @@
+# Global
+
+| Shortcut | Action        |
+| -------- | ------------- |
+| 1        | Queue View    |
+| 2        | Artist View   |
+| 3        | Playlist View |
+| Ctrl+F   | Search        |
+
+# Playback
+
+| Shortcut | Action      |
+| -------- | ----------- |
+| P        | Play/Pause  |
+| +/=      | Volume Up   |
+| -        | Volume Down |
+| X        | Random      |
+| R        | Repeat      |
+| C        | Consume     |
+
+# Songlist
+
+| Shortcut      | Action                     |
+| ------------- | -------------------------- |
+| Ctrl+A        | Select All                 |
+| Shift+D       | Deselect All               |
+| Q             | Play All/Selection         |
+| W             | Append All/Selection       |
+| E             | Insert All/Selection       |
+| B/Shift+B     | Select/Deselect by Album   |
+| Space         | Toggle selection downwards |
+| Page Up       | Scroll Page Up             |
+| Page Down     | Scroll Page Down           |
+| Up/Down       | Move Cursor Up/Down        |
+| Shift+Up/Down | Select Upwards/Downwards   |
+
+# Queue
+
+| Shortcut | Action                |
+| -------- | --------------------- |
+| L        | Jump to Current Song  |
+| Shift+L  | Toggle Follow Mode    |
+| Shift+C  | Clear Queue           |
+| Del      | Delete Selected Items |
