@@ -8,7 +8,8 @@ const icons = {
     queueConsume: "draw-eraser",
     queueRandom: "media-playlist-shuffle",
     queueRepeat: "media-playlist-repeat",
-    queueFollowMode: "mark-location",
+    queueShowCurrent: "mark-location",
+    queueFollowMode: "edit-link",
     queueSaveNew: "document-save-as",
     queueSaveReplace: "document-replace",
     queueRemoveSingle: "edit-delete",
