@@ -1,5 +1,5 @@
 import QtQuick 2.15
-import QtQuick.Controls 2.3
+import QtQuick.Controls 2.15
 import QtQuick.Layouts 1.15
 import org.kde.plasma.core 2.0 as PlasmaCore
 import org.kde.plasma.plasmoid 2.0
@@ -98,7 +98,7 @@ Item {
         running: true
         interval: 200
         onTriggered: {
-            // toggleAppWindow()
+            //  toggleAppWindow()
         }
     }
 }
